--- a/helper-bird.html
+++ b/helper-bird.html
@@ -5,7 +5,7 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <meta name="author" content="">
-    <title>Robin: Making interent safer</title>
+    <title>Helper Bird: Making interent safer</title>
     <link rel="icon" type="image/png" href="assets/img/icons/logo.ico">
     <!-- Material Design fonts -->
     <link href="dist/css/styles.css" rel="stylesheet">
@@ -111,18 +111,18 @@
         <div class='container' style="position: relative;">
             <div class="row" style="margin-top: 13px;    height: 24px;">
                 <div class="col-xs-7 col-sm-7" style="height:44px">
-                    <p style="    line-height: 40px;">Achieving this goal requires collaboration with teams of designers</p>
+                    <p style="    line-height: 40px;">© Copyright 2016 Robert James Gabriel</p>
                 </div>
 
                 <div class="col-xs-5 col-sm-5">
                     <ul>
-                        <a href="" alt="medium"><i class="fa fa-medium" aria-hidden="true"></i></a>
-                        <a href="fff" alt="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        <a><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        <a href="" alt="mail"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-                        <a href="" alt="snapchat"><i class="fa fa-snapchat-ghost" aria-hidden="true"></i></a>
-                        <a href="" alt="dribble"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
-                        <a href="" alt="googleplus"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                        <a href="https://medium.com/@RobertJGabriel" alt="medium"><i style="color:#FE0024" class="fa fa-medium" aria-hidden="true"></i></a>
+                        <a href="https://twitter.com/RobertJGabriel"><i class="fa fa-twitter" style="color:#FF7B00" aria-hidden="true"></i></a>
+                        <a href="mailto:robert_gabriel@outlook.com" alt="mail"><i class="fa fa-envelope"  style="color:#FFF001" aria-hidden="true"></i></a>
+                        <a href="http://www.uplabs.com/RobertJGabriel" alt="dribble"><i class="fa fa-dribbble"   style="color:#4AA519"aria-hidden="true"></i></a>
+                        <a href="https://github.com/RobertJGabriel" alt="github"><i  style="color:#0162A6" class="fa fa-github" aria-hidden="true"></i></a>
+                        <a href="https://plus.google.com/105784333865475696211/posts" alt="googleplus"><i  style="color:#840094" class="fa fa-google-plus" aria-hidden="true"></i></a>
+                        <a href="https://www.linkedin.com/in/robertjamesgabriel" alt="linkedin"><i  style="color:#000" class="fa fa-linkedin" aria-hidden="true"></i></a>
                     </ul>
                 </div>
             </div>
