--- a/awards.html
+++ b/awards.html
@@ -124,72 +124,74 @@
                 <p class="lead">Bt Young Scientist </p>
 
                 <p>
-                  Robert Gabriel from Scoil Mhuire Gan Smal in Blarney, who came second in the Chemical, Physical & Mathematical Sciences Senior Individual category for his project ' A new algorithm to improve the gathering of information on mobile. This later become the Yeti engine
+                    Robert Gabriel from Scoil Mhuire Gan Smal in Blarney, who came second in the Chemical, Physical & Mathematical Sciences Senior Individual category for his project ' A new algorithm to improve the gathering of information on mobile. This later become the
+                    Yeti engine
                 </p>
                 <hr>
                 <h1>Bt Young Scientist Award : Technology</h1>
                 <p class="lead">Bt Young Scientist Award</p>
 
                 <p>
-                  Robert Gabriel, a fifth year student from Scoil Mhuire gan Smál in Blarney, won the favour of the judges with his project “Automated Monitoring of Computer SQL Servers by way of a Merit”. This later became Tallus
+                    Robert Gabriel, a fifth year student from Scoil Mhuire gan Smál in Blarney, won the favour of the judges with his project “Automated Monitoring of Computer SQL Servers by way of a Merit”. This later became Tallus
                 </p>
                 <hr>
                 <h1>Sci Fest Award : For Progamming x 5</h1>
                 <p class="lead">Sci Fest</p>
 
                 <p>
-                  SciFest is a series of one-day science fairs for second-level students hosted at local level in schools and at regional level in the Institutes of Technology, culminating in a national competition for the overall winners from the institutes. The project consists of four distinct strands – local, regional, national and international. This was a project that was made in 24 hours.
+                    SciFest is a series of one-day science fairs for second-level students hosted at local level in schools and at regional level in the Institutes of Technology, culminating in a national competition for the overall winners from the institutes. The project
+                    consists of four distinct strands – local, regional, national and international. This was a project that was made in 24 hours.
                 </p>
                 <hr>
                 <h1>
 HEANet Special Award</h1>
                 <p class="lead">HEANet</p>
                 <p>
-                  The project which shows the most practical and innovative use of network technology in performing background research for the project and/or collaborating with other team members, teachers etc.
+                    The project which shows the most practical and innovative use of network technology in performing background research for the project and/or collaborating with other team members, teachers etc.
                 </p>
                 <hr>
                 <h1>Avaya Communications Special Award</h1>
                 <p class="lead">Avaya</p>
 
                 <p>
-                  Avaya Incis a privately held global provider of business communications and collaboration systems. The international headquarters is in Basking Ridge, New Jersey, United States. The company provides contact centers, networking (routers, switches and other networking hardware), unified communications, and video products (integrated hardware and software) solutions and services.
+                    Avaya Incis a privately held global provider of business communications and collaboration systems. The international headquarters is in Basking Ridge, New Jersey, United States. The company provides contact centers, networking (routers, switches and other
+                    networking hardware), unified communications, and video products (integrated hardware and software) solutions and services.
                 </p>
                 <hr>
                 <h1>Junior Spiders Awards: All Ireland TItle</h1>
                 <p class="lead">Eircom</p>
 
                 <p>
-                  A web application that is fully developed and available to use; it must be fully working. It should be user friendly, useful and innovative.
+                    A web application that is fully developed and available to use; it must be fully working. It should be user friendly, useful and innovative.
                 </p>
                 <hr>
                 <h1>Junior Spider Awards: Best Application</h1>
                 <p class="lead">Eircom</p>
 
                 <p>
-              A web application that is fully developed and available to use; it must be fully working. It should be user friendly, useful and innovative.
+                    A web application that is fully developed and available to use; it must be fully working. It should be user friendly, useful and innovative.
                 </p>
                 <hr>
                 <h1>Teamwork Hackathon 2015  : Runner Up</h1>
                 <p class="lead">Teamwork.com</p>
 
                 <p>
-                Create a internal website , social website in 24 hours. It was voted as second best would of 15 ideas. Cannot say any more :)
+                    Create a internal website , social website in 24 hours. It was voted as second best would of 15 ideas. Cannot say any more :)
                 </p>
                 <hr>
                 <h1>  Everyday Excellence Award</h1>
                 <p class="lead">Teamwork.com</p>
 
                 <p>
-                  Reason:We’re delighted to have Robert as a full-time member of the team now. He’s already made great improvements to the teamwork.com codebase, with loads more planned, a lot of it being behind-the-scenes improvements which most people don’t see/realise.
-<br>
-  Reason:Doing amazing job and I was impressed to see what awesomeness he is cooking for the website and maybe a future update of it. Nice to have him on board!
+                    Reason:We’re delighted to have Robert as a full-time member of the team now. He’s already made great improvements to the teamwork.com codebase, with loads more planned, a lot of it being behind-the-scenes improvements which most people don’t see/realise.
+                    <br> Reason:Doing amazing job and I was impressed to see what awesomeness he is cooking for the website and maybe a future update of it. Nice to have him on board!
                 </p>
                 <hr>
                 <h1>Above and Beyond the Call of Duty</h1>
                 <p class="lead">Teamwork.com</p>
 
                 <p>
-                  Reason: Robert Gabriel – A pure gent, always has a smile and always goes out of his way to help Support when ticket is beyond us. Thanks Robert!
+                    Reason: Robert Gabriel – A pure gent, always has a smile and always goes out of his way to help Support when ticket is beyond us. Thanks Robert!
                 </p>
             </div>
 
@@ -204,15 +206,15 @@ HEANet Special Award</h1>
                 </div>
 
                 <div class="col-xs-5 col-sm-5">
-                  <ul>
-                      <a href="https://medium.com/@RobertJGabriel" alt="medium"><i class="fa fa-medium" aria-hidden="true"></i></a>
-                      <a href="https://twitter.com/RobertJGabriel"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                      <a href="mailto:robert_gabriel@outlook.com" alt="mail"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-                      <a href="http://www.uplabs.com/RobertJGabriel" alt="dribble"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
-                                            <a href="https://github.com/RobertJGabriel" alt="github"><i class="fa fa-github" aria-hidden="true"></i></a>
-                      <a href="https://plus.google.com/105784333865475696211/posts" alt="googleplus"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-                          <a href="https://www.linkedin.com/in/robertjamesgabriel" alt="linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                  </ul>
+                    <ul>
+                        <a href="https://medium.com/@RobertJGabriel" alt="medium"><i class="fa fa-medium" aria-hidden="true"></i></a>
+                        <a href="https://twitter.com/RobertJGabriel"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                        <a href="mailto:robert_gabriel@outlook.com" alt="mail"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                        <a href="http://www.uplabs.com/RobertJGabriel" alt="dribble"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
+                        <a href="https://github.com/RobertJGabriel" alt="github"><i class="fa fa-github" aria-hidden="true"></i></a>
+                        <a href="https://plus.google.com/105784333865475696211/posts" alt="googleplus"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                        <a href="https://www.linkedin.com/in/robertjamesgabriel" alt="linkedin"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                    </ul>
                 </div>
             </div>
         </div>
