--- a/helper-bird.html
+++ b/helper-bird.html
@@ -44,7 +44,7 @@
                 <div class="col-lg-1"></div>
 
                 <div class="col-lg-10">
-                    <span id="logo2"><h1 class="header-title" style="line-height: 308px;">Robin</h1></span>
+                    <span id="logo2"><h1 class="header-title" style="line-height: 308px;">Helper Bird</h1></span>
                 </div>
 
                 <div class="col-lg-1"></div>
@@ -80,15 +80,22 @@
                     </div>
                 </div>
 
+                <h1>Features</h1>
+                <p class="lead">Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
 
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at metus non tortor placerat maximus. Morbi at congue diam. Pellentesque at posuere magna, vel placerat ex. Aenean sed enim dolor. Aenean vitae nunc at sem fringilla vulputate. Aliquam
                     erat volutpat. Phasellus ut ex finibus, viverra neque et, blandit lorem. Cras id dolor tempor, pulvinar erat eu, cursus elit. Donec vestibulum vel felis vitae ullamcorper. Fusce vel ante et nulla eleifend auctor non in erat.
 
                 </p>
+
+                <h1>Built using</h1>
+                <p class="lead">Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+
                 <p>
-                    Pellentesque in sodales libero. Vivamus dignissim nec risus nec mollis. Duis luctus eu metus a consectetur. Nunc euismod tristique tortor, vel accumsan ex venenatis tincidunt. Ut sit amet ligula pellentesque lorem mattis accumsan at porta lorem. Fusce
-                    quis lectus viverra, mattis erat non, dignissim enim. Morbi tempus consequat arcu, nec imperdiet velit vestibulum in.
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at metus non tortor placerat maximus. Morbi at congue diam. Pellentesque at posuere magna, vel placerat ex. Aenean sed enim dolor. Aenean vitae nunc at sem fringilla vulputate. Aliquam
+                    erat volutpat. Phasellus ut ex finibus, viverra neque et, blandit lorem. Cras id dolor tempor, pulvinar erat eu, cursus elit. Donec vestibulum vel felis vitae ullamcorper. Fusce vel ante et nulla eleifend auctor non in erat.
+
                 </p>
 
 
@@ -96,6 +103,8 @@
                     <iframe class="embed-responsive-item" width="640" height="480" src="https://www.youtube.com/embed/5qanlirrRWs" frameborder="0" allowfullscreen></iframe>
                     <iframe width="560" height="315" src="https://www.youtube.com/embed/5qanlirrRWs" frameborder="0" allowfullscreen></iframe>
                 </div>
+                <h1>Press & Awards</h1>
+                <p class="lead">Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
 
                 <p>
                     Pellentesque in sodales libero. Vivamus dignissim nec risus nec mollis. Duis luctus eu metus a consectetur. Nunc euismod tristique tortor, vel accumsan ex venenatis tincidunt. Ut sit amet ligula pellentesque lorem mattis accumsan at porta lorem. Fusce
