--- a/apps/helper-bird-chrome.html
+++ b/apps/helper-bird-chrome.html
@@ -8,7 +8,7 @@
     <title>Helper Bird: Making interent safer</title>
     <link rel="icon" type="image/png" href="assets/img/icons/logo.ico">
     <!-- Material Design fonts -->
-    <link href="dist/css/styles.css" rel="stylesheet">
+    <link href="../dist/css/styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -138,8 +138,8 @@
         </div>
 
     </footer>
-    <script src="assets/js/lib/L.js"></script>
-    <script src="assets/js/app/main.js" type="application/javascript" async></script>
+    <script src="../dist/js/lib/L.js"></script>
+    <script src="../dist/js/app/main.js" type="application/javascript" async></script>
 </body>
 
 </html>
