--- a/design/index.html
+++ b/design/index.html
@@ -5,9 +5,9 @@
     <meta name="description" content="">
     <meta name="keywords" content="">
     <meta name="author" content="">
-    <title>Ken Blocks' Mustang</title>
+    <title>Design</title>
     <link rel="icon" type="image/png" href="assets/img/icons/logo.ico">
-    <link href="dist/css/styles.css" rel="stylesheet">
+    <link href="../dist/css/styles.css" rel="stylesheet">
 </head>
 
 <body>
@@ -42,7 +42,7 @@
                 <div class="col-lg-1"></div>
 
                 <div class="col-lg-8">
-                    <span id="logo2"><h1 class="header-title" style="line-height: 308px;">My Work</h1></span>
+                    <span id="logo2"><h1 class="header-title" style="line-height: 308px;">Design Thoughts</h1></span>
                 </div>
 
                 <div class="col-lg-1"></div>
@@ -120,8 +120,8 @@
 
             <div class="col-xs-12 col-sm-12">
                 <hr>
-                <h1>Awards one</h1>
-                <p class="lead">Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
+                <h1>Reimagine Basecamp 3</h1>
+                <p class="lead">Fixing the UX issues and useability issues of Basecamp 3.</p>
 
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at metus non tortor placerat maximus. Morbi at congue diam. Pellentesque at posuere magna, vel placerat ex. Aenean sed enim dolor. Aenean vitae nunc at sem fringilla vulputate. Aliquam
@@ -129,23 +129,7 @@
 
                 </p>
                 <hr>
-                <h1>Awards one</h1>
-                <p class="lead">Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
 
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at metus non tortor placerat maximus. Morbi at congue diam. Pellentesque at posuere magna, vel placerat ex. Aenean sed enim dolor. Aenean vitae nunc at sem fringilla vulputate. Aliquam
-                    erat volutpat. Phasellus ut ex finibus, viverra neque et, blandit lorem. Cras id dolor tempor, pulvinar erat eu, cursus elit. Donec vestibulum vel felis vitae ullamcorper. Fusce vel ante et nulla eleifend auctor non in erat.
-
-                </p>
-                <hr>
-                <h1>Awards one</h1>
-                <p class="lead">Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
-
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum at metus non tortor placerat maximus. Morbi at congue diam. Pellentesque at posuere magna, vel placerat ex. Aenean sed enim dolor. Aenean vitae nunc at sem fringilla vulputate. Aliquam
-                    erat volutpat. Phasellus ut ex finibus, viverra neque et, blandit lorem. Cras id dolor tempor, pulvinar erat eu, cursus elit. Donec vestibulum vel felis vitae ullamcorper. Fusce vel ante et nulla eleifend auctor non in erat.
-
-                </p>
             </div>
         </div>
     </div>
@@ -153,26 +137,26 @@
         <div class='container' style="position: relative;">
             <div class="row" style="margin-top: 13px;    height: 24px;">
                 <div class="col-xs-7 col-sm-7" style="height:44px">
-                    <p style="    line-height: 40px;">Achieving this goal requires collaboration with teams of designers</p>
+                    <p style="    line-height: 40px;">© Copyright 2016 Robert James Gabriel</p>
                 </div>
 
                 <div class="col-xs-5 col-sm-5">
                     <ul>
-                        <a href="" alt="medium"><i class="fa fa-medium" aria-hidden="true"></i></a>
-                        <a href="fff" alt="facebook"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                        <a><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                        <a href="" alt="mail"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-                        <a href="" alt="snapchat"><i class="fa fa-snapchat-ghost" aria-hidden="true"></i></a>
-                        <a href="" alt="dribble"><i class="fa fa-dribbble" aria-hidden="true"></i></a>
-                        <a href="" alt="googleplus"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
+                        <a href="https://medium.com/@RobertJGabriel" alt="medium"><i style="color:#FE0024" class="fa fa-medium" aria-hidden="true"></i></a>
+                        <a href="https://twitter.com/RobertJGabriel"><i class="fa fa-twitter" style="color:#FF7B00" aria-hidden="true"></i></a>
+                        <a href="mailto:robert_gabriel@outlook.com" alt="mail"><i class="fa fa-envelope"  style="color:#FFF001" aria-hidden="true"></i></a>
+                        <a href="http://www.uplabs.com/RobertJGabriel" alt="dribble"><i class="fa fa-dribbble"   style="color:#4AA519"aria-hidden="true"></i></a>
+                        <a href="https://github.com/RobertJGabriel" alt="github"><i  style="color:#0162A6" class="fa fa-github" aria-hidden="true"></i></a>
+                        <a href="https://plus.google.com/105784333865475696211/posts" alt="googleplus"><i  style="color:#840094" class="fa fa-google-plus" aria-hidden="true"></i></a>
+                        <a href="https://www.linkedin.com/in/robertjamesgabriel" alt="linkedin"><i  style="color:#000" class="fa fa-linkedin" aria-hidden="true"></i></a>
                     </ul>
                 </div>
             </div>
         </div>
 
     </footer>
-    <script src="assets/js/lib/L.js"></script>
-    <script src="assets/js/app/main.js" type="application/javascript" async></script>
+    <script src="../dist/js/lib/L.js"></script>
+    <script src="../dist/js/app/main.js" type="application/javascript" async></script>
 </body>
 
 </html>
